force-app/main/default/objects/PortalSyncDeadLetter__c/PortalSyncDeadLetter__c.object-meta.xml
<CustomObject>
    <label>Portal Sync Dead Letter</label>
    <nameField>
        <label>PortalSyncDeadLetter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Sync Dead Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>