force-app/main/default/objects/PortalSyncDeadLetter__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <label>Portal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carl Software</fullName>
            </value>
            <value>
                <fullName>TriBU</fullName>
            </value>
            <value>
                <fullName>Berger-Levrault Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>