force-app/main/default/objects/PortalSyncDeadLetter__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce id of the record that failed to sync, for any object. Generic replacement for Contact_Id__c (a Contact-only lookup, kept for backward compatibility).</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>