force-app/main/default/objects/PortalSyncDeadLetter__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>SObject API name of the record that failed to sync (e.g. Contact, Account).</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>